# LiveCodeBench-Pro

./: CMakeLists.txt  INSTALLATION_GUIDE.md  README.md  bert_livecoder_config.json  gui_config.json  launch_livecoder.py  livecoder_main.py  livecoder_project_setup.py  requirements.txt  run_livecoder_simple.py  test_gui.py  test_installation.py
livecoder_agent/crews/: architecture_agent.py  demo_agent.py  livecoder_crew.py  presentation_agent.py
livecoder_agent/gui/: architecture_viewer.py  demo_dashboard.py  main_interface.py  presentation_controller.py
livecoder_agent/models/: bert_livecoder_adapter.py
livecoder_agent/tasks/: architecture_analysis_task.py
